--- a/configure.in
+++ b/configure.in
@@ -15,13 +15,13 @@
 
 
 AC_PREREQ([2.63])
-AC_INIT([check_gitlab], [0.1], [rkoch@rk-it.at])
+AC_INIT([check_gitlab], [1.0], [rkoch@rk-it.at])
 AM_INIT_AUTOMAKE
 
 AC_PREFIX_DEFAULT(/usr/local/nagios/libexec)
 PKG_NAME="check_gitlab"
-PKG_VERSION="0.1"
-PKG_REL_DATE="2015-04-15"
+PKG_VERSION="1.0"
+PKG_REL_DATE="2015-04-29"
 
 # Figure out how to invoke "install" and what install options to use
 AC_PROG_INSTALL
@@ -30,23 +30,16 @@ AC_SUBST(INSTALL)
 # What OS are we running?
 AC_CANONICAL_HOST
 
-# Check for programs
-AC_PATH_PROG([PERL],[perl])
-
 # Options
 AC_ARG_WITH(nagios_user,AC_HELP_STRING([--with-nagios-user=<user>],[sets user name to run Nagios]),nagios_user=$withval,nagios_user=nagios)
 AC_ARG_WITH(nagios_group,AC_HELP_STRING([--with-nagios-group=<grp>],[sets group name to run Nagios]),nagios_group=$withval,nagios_group=nagios)
-AC_ARG_WITH(pnp_dir,AC_HELP_STRING([--with-pnp-dir=<dir>],[path to PNP share directory]),pnp_dir=$withval,pnp_dir=/usr/local/pnp4nagios/share)
-AC_ARG_ENABLE(pnp_template,AC_HELP_STRING([--enable-pnp-template],[install template for PNP4Nagios]),pnp_template=$enableval,pnp_template=yes)
 AC_SUBST(nagios_user)
 AC_SUBST(nagios_group)
-AC_SUBST(pnp_dir)
-AC_SUBST(pnp_template)
 
 INSTALL_OPTS="-o $nagios_user -g $nagios_group"
 AC_SUBST(INSTALL_OPTS)
 
-AC_CONFIG_FILES([Makefile plugin-dir/Makefile contrib/Makefile])
+AC_CONFIG_FILES([Makefile plugin-dir/Makefile])
 AC_OUTPUT
 
 # Review options
@@ -60,8 +53,6 @@ echo "  ------------------------- -------------------------"
 AC_MSG_RESULT([               Nagios user: $nagios_user])
 AC_MSG_RESULT([              Nagios group: $nagios_group])
 AC_MSG_RESULT([         Plugins directory: $prefix])
-AC_MSG_RESULT([             PNP directory: $pnp_dir])
-AC_MSG_RESULT([      Install PNP template: $pnp_template])
 echo ""
 echo ""
 echo "Review the options above for accuray. If they look okay,"
